Bugfix: Fixed z-index of menu bar to be always at the top

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ main {
 
 header {
     position: fixed;
+    z-index: 1;
     top: 0;
     width: 100%;
     display: flex;
